# document-pipeline

./: .gitignore  .mcp.json  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TRIAGE.md  build.gradle.kts  cliff.toml  cog.toml  database.md  gradle.properties  lefthook.yml  settings.gradle.kts
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/skills/create-migration/: SKILL.md
.claude/skills/implement-stub/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
app-api/: build.gradle.kts
app-api/src/main/resources/: application.conf  logback.xml
app-worker/: build.gradle.kts
app-worker/src/main/resources/: application.conf  logback-text.xml  logback.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: pipeline-conventions.gradle.kts
config/detekt/: detekt.yml
core-domain/: build.gradle.kts
docker/: docker-compose.mock.yml  docker-compose.yml
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/dashboards-json/: document-pipeline.json
docker/mock-ml-service/: main.py  test_main.py
docker/prometheus/: prometheus.yml
docs/plans/: 2026-02-16-konform-validation-design.md  2026-02-16-konform-validation-plan.md
frontend/: .dockerignore  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: bulk-delete.spec.ts  document-detail.spec.ts  document-list.spec.ts  error-states.spec.ts  full-pipeline.spec.ts  navigation.spec.ts  theme.spec.ts  upload-flow.spec.ts  upload.spec.ts
frontend/src/: globals.css  main.tsx
frontend/src/components/dashboard/: stat-card.tsx
frontend/src/components/documents/: bulk-delete-dialog.tsx  classification-badge.test.tsx  classification-badge.tsx  delete-document-dialog.tsx  document-card.tsx  (+2 more)
frontend/src/hooks/: use-bulk-delete.test.ts  use-bulk-delete.ts  use-document-delete.ts  use-document-detail.ts  use-document-download.ts  use-document-list.ts  use-document-ocr.ts  use-document-upload.ts  use-label-correction.test.ts  use-label-correction.ts  use-retry-classification.ts  use-selection-mode.test.ts  use-selection-mode.ts
frontend/src/lib/: classification.test.ts  classification.ts  constants.ts  format.test.ts  format.ts  query-keys.ts
frontend/src/routes/: __root.tsx  index.tsx  upload.integration.test.tsx  upload.tsx
frontend/src/test/: fixtures.ts  test-utils.tsx
frontend/src/types/: api.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
infra-db/: build.gradle.kts
infra-queue/: build.gradle.kts
infra-storage/: build.gradle.kts
ml-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
ml-service/app/: config.py  correlation.py  logging_config.py  main.py  metrics.py  pipeline.py  schemas.py
ml-service/app/services/: bbox_extractor.py  classifier.py  ocr.py  pdf_converter.py
ml-service/tests/: conftest.py  test_bbox_extractor.py  test_classifier.py  test_correlation.py  test_gpu_integration.py  test_logging_config.py  test_main.py  test_ocr.py  test_pdf_converter.py  test_pipeline.py
scripts/: dev.sh
(+107 files in other folders)
