[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-service"
version = "0.2.0"
description = "Document classification and OCR service for the Document Pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "transformers>=4.53.0",
    "torch>=2.6.0",
    "accelerate>=1.3.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.0",
    "Pillow>=11.1.0",
    "PyMuPDF>=1.25.0",
    "pydantic-settings>=2.7.0",
    "paddleocr>=2.7,<4",
    "paddlepaddle>=2.6,<3",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.0",
    "python-json-logger>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not gpu'"
markers = [
    "gpu: requires CUDA GPU and downloaded model weights (deselected by default, run with: pytest -m gpu)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "D",    # pydocstyle — docstring enforcement
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes — unused imports, undefined names
    "I",    # isort — import sorting
    "B",    # flake8-bugbear — common bug patterns
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade — modern Python patterns
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "D100",  # Missing module docstring (empty __init__.py files)
    "D104",  # Missing package docstring
    "D203",  # Conflicts with D211
    "D213",  # Conflicts with D212
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "B011", "SIM300"]
"app/__init__.py" = ["D"]
"app/services/__init__.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
